fix overflow when menu is open

--- a/src/sass/layout/page.scss
+++ b/src/sass/layout/page.scss
@@ -2,6 +2,12 @@
   color: $primary-color;
   font-family: Inter, sans-serif;
 
+  &__body {
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
+
   &__title {
     @include on-tablet {
       font-size: 40px;
